# Embodied_Assistant

./: .gitignore  CLAUDE.md  README.md  app.py  model_config.yaml  pyproject.toml
.chainlit/: config.toml
scripts/: start-ollama-4gpu-parallel.sh  start_webcam_stream.ps1  test_rtsp_connection.py  windows_run.bat  windows_setup.bat
test_assets/: .gitkeep
tests/: __init__.py  test_agent_tools.py  test_chainlit_elements.py  test_live_capture.py  test_mouse.py  test_multimodal_message.py  test_ollama_connection.py  test_parallel_inference.py  test_video_frames.py  test_vision_model.py  test_webcam_capture.py
tools/: __init__.py  live_capture.py  mouse.py  profiler.py  webcam.py
